Add Novo Altulização do Arquivo

--- a/exercicio_html_js/src/_css/main.css
+++ b/exercicio_html_js/src/_css/main.css
@@ -83,7 +83,7 @@ main section.formulario
     margin-top:10px;
     font-size:14px;
     border-radius:12px;
-    color:#fff;
+    color:#f51515;
     font-family: "Open Sans", sans-serif;
     font-weight:400;
     display:none;
