--- a/exercicio_html_js/src/_css/reset.css
+++ b/exercicio_html_js/src/_css/reset.css
@@ -1,19 +1,19 @@
 *{
     margin:0;
     padding:0;
-    box-sizing:border-box;
+    box-sizing: border-box;
 }
 html,body
 {
     height:100%;
-    background-image:url("../_imagens/urban-vintage.jpg");
-    background-repeat:no-repeat;
-    background-size:cover;
-    background-position:100%;
 }
 .container
 {
     width:100%;
-    max-width:700px;
+    max-width:500px;
     margin:0 auto;
+}
+.clear
+{
+    clear: both;
 }
